src/objects/n2de__User_activity_log__c.object
<CustomObject>
    <description>Tracks user&apos;s log in/log out activity and reasons.</description>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Log in</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Log out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Action_date__c</fullName>
        <label>Action date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>End of day</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User activity log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User activity logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>